Trying to commite the express template to make sure it works for testing. Then I will commit the actual framework

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/jrgleason/webpack-vue-template/issues"
   },
-  "homepage": "https://github.com/jrgleason/webpack-vue-template#readme"
+  "homepage": "https://github.com/jrgleason/webpack-vue-template#readme",
+  "devDependencies": {
+    "webpack": "^4.1.1"
+  }
 }
